fix(question): add validation into nested dto